kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-api-svc
  labels:
    app: infra-api
  namespace: infra-backend
spec:
  ports:
  - port: 80
  selector:
    app: infra-api
