kubernetes/04-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: infra-backend-ingress
  namespace: infra-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.apascualco.com
    secretName: infra-backend-tls
  rules:
  - host: api.apascualco.com
    http:
      paths:
      - backend:
          serviceName: infra-api-svc
          servicePort: 80
